--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
             <div class="jane-style">
                 <h3>Jane Doe: Loves <em>dolphins</em> in Sarasota, FL</h3>
             </div>
-            <div class="jane-style"><h3>Auguste Bren: Loves <em>Camping</em> everywhere</h3></div>
+            <div class="augiedog">
+                <h3>Auguste Bren: Loves <em>Camping</em> everywhere</h3>
+            </div>
+            <div class="elmer-style">
+                <h3>Elmer Figueroa: </h3>
+            </div>
+            <div class="nara-styles">
+                <h3>Nara Roth: </h3>
+            </div>
             <div class="code-ninja-style">
                 <h3>Code Ninja: Loves <em>peanuts</em> in Redding, CA</h3>
             </div>
