--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h3>Auguste Bren: Loves <em>Camping</em> everywhere</h3>
             </div>
             <div class="elmer-style">
-                <h3>Elmer Figueroa: Loves <em>:camera_flash::sunrise_over_mountains:</em> in Susanville, CA</h3>
+                <h3>Elmer Figueroa: Loves <em>:camera_flash:</em><em>:sunrise_over_mountains:</em> in Susanville, CA</h3>
             </div>
             <div class="nara-styles">
                 <h3>Nara Roth: </h3>
