--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <h3>Elmer Figueroa: </h3>
             </div>
             <div class="nara-styles">
-                <h3>Nara Roth: </h3>
+                <h3>Nara Roth: Loves <em>lavender</em> lattes <em> at Maison Marcel, Chicago</h3>
             </div>
             <div class="code-ninja-style">
                 <h3>Code Ninja: Loves <em>peanuts</em> in Redding, CA</h3>
